@@ -31,10 +31,104 @@
 extern "C" {
 #endif
 
-#include "portable.h"
-
 #define LIBDALI_VERSION "1.7"        /**< libdali version */
 #define LIBDALI_RELEASE "2016.291"   /**< libdali release date */
+
+
+/* C99 standard headers */
+#include <stdlib.h>
+#include <stdio.h>
+#include <stdarg.h>
+#include <time.h>
+#include <string.h>
+#include <ctype.h>
+
+/** @def PRIsize_t
+    @brief A printf() macro for portably printing size_t values */
+#define PRIsize_t "zu"
+
+#if defined(WIN32) || defined(_WIN32) || defined(WIN64) || defined(_WIN64)
+  #define DLP_WIN 1
+#endif
+
+/* Set platform specific features, Windows, Solaris, then everything else */
+#if defined(DLP_WIN)
+  #include <winsock2.h>
+  #include <ws2tcpip.h>
+  #include <windows.h>
+  #include <process.h>
+  #include <io.h>
+
+  /* Re-define print conversion for size_t values */
+  #undef PRIsize_t
+  #if defined(WIN64) || defined(_WIN64)
+    #define PRIsize_t "I64u"
+  #else
+    #define PRIsize_t "I32u"
+  #endif
+
+  /* For MSVC 2012 and earlier define standard int types, otherwise use inttypes.h */
+  #if defined(_MSC_VER) && _MSC_VER <= 1700
+    typedef signed char int8_t;
+    typedef unsigned char uint8_t;
+    typedef signed short int int16_t;
+    typedef unsigned short int uint16_t;
+    typedef signed int int32_t;
+    typedef unsigned int uint32_t;
+    typedef signed __int64 int64_t;
+    typedef unsigned __int64 uint64_t;
+  #else
+    #include <inttypes.h>
+  #endif
+
+  #if defined(_MSC_VER)
+    #if !defined(PRId64)
+      #define PRId64 "I64d"
+    #endif
+    #if !defined(SCNd64)
+      #define SCNd64 "I64d"
+    #endif
+
+    #define strdup _strdup
+    #define read _read
+    #define write _write
+    #define open _open
+    #define close _close
+    #define snprintf _snprintf
+    #define vsnprintf _vsnprintf
+    #define strncasecmp _strnicmp
+  #endif
+
+#elif defined(__sun__) || defined(__sun)
+  #include <unistd.h>
+  #include <inttypes.h>
+  #include <errno.h>
+  #include <sys/types.h>
+  #include <sys/stat.h>
+  #include <sys/socket.h>
+  #include <netinet/in.h>
+  #include <netdb.h>
+  #include <sys/time.h>
+  #include <sys/utsname.h>
+  #include <pwd.h>
+
+#else
+  #include <unistd.h>
+  #include <inttypes.h>
+  #include <errno.h>
+  #include <sys/socket.h>
+  #include <netinet/in.h>
+  #include <netdb.h>
+  #include <sys/time.h>
+  #include <sys/utsname.h>
+  #include <pwd.h>
+
+#endif
+
+/* Use int for SOCKET if platform includes have not defined it */
+#ifndef SOCKET
+  #define SOCKET int
+#endif
 
 #define MAXPACKETSIZE       16384    /**< Maximum packet size for libdali */
 #define MAXREGEXSIZE        16384    /**< Maximum regex pattern size */
@@ -65,7 +159,7 @@ extern "C" {
 #define DL_EPOCH2DLTIME(X) X * (dltime_t) DLTMODULUS
 /** Macro to scale a high precision time to a Unix/POSIX epoch time */
 #define DL_DLTIME2EPOCH(X) X / DLTMODULUS
-  
+
 /** Data type for high-precision time values.
  *  Require a large (>= 64-bit) integer type */
 typedef int64_t dltime_t;
