@@ -30,126 +30,7 @@
 extern "C" {
 #endif
 
-/* Portability to the XScale (ARM) architecture, possible others,
- * requires a packed attribute in certain places but this only works
- * with GCC and compatible for now. */
-#if defined (__GNUC__)
-  #define DLP_PACKED __attribute__ ((packed))
-#else
-  #define DLP_PACKED
-#endif
-
-/* C99 standard headers */
-#include <stdlib.h>
-#include <stdio.h>
-#include <stdarg.h>
-#include <time.h>
-#include <string.h>
-#include <ctype.h>
-
-#if defined(__linux__) || defined(__linux) || defined(__CYGWIN__)
-  #define DLP_LINUX 1
-  #define DLP_GLIBC2 1 /* Deprecated */
-
-  #include <unistd.h>
-  #include <inttypes.h>
-  #include <errno.h>
-  #include <sys/socket.h>
-  #include <netinet/in.h>
-  #include <netdb.h>
-  #include <sys/time.h>
-  #include <sys/utsname.h>
-  #include <pwd.h>
-
-#elif defined(__APPLE__) || defined(__FreeBSD__) || defined(__OpenBSD__) || defined(__NetBSD__)
-  #define DLP_BSD
-
-  #include <unistd.h>
-  #include <inttypes.h>
-  #include <errno.h>
-  #include <sys/socket.h>
-  #include <netinet/in.h>
-  #include <netdb.h>
-  #include <sys/time.h>
-  #include <sys/utsname.h>
-  #include <pwd.h>
-
-#elif defined(__sun__) || defined(__sun)
-  #define DLP_SOLARIS 1
-
-  #include <unistd.h>
-  #include <inttypes.h>
-  #include <errno.h>
-  #include <sys/types.h>
-  #include <sys/stat.h>
-  #include <sys/socket.h>
-  #include <netinet/in.h>
-  #include <netdb.h>
-  #include <sys/time.h>
-  #include <sys/utsname.h>
-  #include <pwd.h>
-
-#elif defined(WIN32) || defined(_WIN32) || defined(WIN64) || defined(_WIN64)
-  #define DLP_WIN 1
-  #define DLP_WIN32 1 /* Deprecated */
-
-  #include <winsock2.h>
-  #include <ws2tcpip.h>
-  #include <windows.h>
-  #include <process.h>
-  #include <io.h>
-
-  /* For MSVC 2012 and earlier define standard int types, otherwise use inttypes.h */
-  #if defined(_MSC_VER) && _MSC_VER <= 1700
-    typedef signed char int8_t;
-    typedef unsigned char uint8_t;
-    typedef signed short int int16_t;
-    typedef unsigned short int uint16_t;
-    typedef signed int int32_t;
-    typedef unsigned int uint32_t;
-    typedef signed __int64 int64_t;
-    typedef unsigned __int64 uint64_t;
-  #else
-    #include <inttypes.h>
-  #endif
-
-  #if defined(_MSC_VER)
-    #if !defined(PRId64)
-      #define PRId64 "I64d"
-    #endif
-    #if !defined(SCNd64)
-      #define SCNd64 "I64d"
-    #endif
-    #if !defined(ssize_t)
-      #define ssize_t SSIZE_T
-    #endif
-  #endif
-
-  #define strdup _strdup
-  #define read _read
-  #define write _write
-  #define open _open
-  #define close _close
-  #define snprintf _snprintf
-  #define vsnprintf _vsnprintf
-  #define strncasecmp _strnicmp
-
-#else
-  typedef signed char int8_t;
-  typedef unsigned char uint8_t;
-  typedef signed short int int16_t;
-  typedef unsigned short int uint16_t;
-  typedef signed int int32_t;
-  typedef unsigned int uint32_t;
-  typedef signed long long int64_t;
-  typedef unsigned long long uint64_t;
-
-#endif
-
-/* Use int for SOCKET if platform includes have not defined it */
-#ifndef SOCKET
-  #define SOCKET int
-#endif
+#include "libdali.h"
 
 extern int dlp_sockstartup (void);
 extern int dlp_sockconnect (SOCKET socket, struct sockaddr * inetaddr, int addrlen);
