@@ -1,5 +1,6 @@
 2019.199:
 	- Support for IPv6 connections, conversion to pure getaddrinfo() usage.
+	- Incorporate platform-specific declarations into libdali.h.
 
 2017.066:
 	- Properly the add client ID in exchanges with the server.  Thanks
